[gd_scene load_steps=3 format=3 uid="uid://c1ltxtwfc7hjp"]

[ext_resource type="Script" path="res://scripts/jokers.gd" id="1_s43g1"]
[ext_resource type="PackedScene" uid="uid://cplwodu4idh7r" path="res://scenes/joker_place.tscn" id="2_hedqy"]

[node name="Jokers" type="Node2D"]
script = ExtResource("1_s43g1")

[node name="JokerPlace1" parent="." instance=ExtResource("2_hedqy")]
position = Vector2(64, 320)

[node name="JokerPlace2" parent="." instance=ExtResource("2_hedqy")]
position = Vector2(114, 320)

[node name="JokerPlace3" parent="." instance=ExtResource("2_hedqy")]
position = Vector2(164, 320)

[node name="JokerPlace4" parent="." instance=ExtResource("2_hedqy")]
position = Vector2(214, 320)

[node name="JokerPlace5" parent="." instance=ExtResource("2_hedqy")]
position = Vector2(264, 320)
